@@ -16,35 +16,33 @@
 
 package dagger.internal.codegen;
 
-import com.google.common.base.Splitter;
-import com.google.common.collect.ImmutableList;
-import com.google.testing.compile.Compiler;
-
-import javax.annotation.processing.Processor;
-import java.io.File;
-import java.util.Arrays;
-
-import static com.google.common.base.StandardSystemProperty.JAVA_CLASS_PATH;
-import static com.google.common.base.StandardSystemProperty.PATH_SEPARATOR;
 import static com.google.testing.compile.Compiler.javac;
-import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
+
+import com.google.testing.compile.Compiler;
+import dagger.internal.codegen.base.Util;
+import java.io.File;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import javax.annotation.processing.Processor;
 
 /** {@link Compiler} instances for testing Dagger. */
 public final class Compilers {
   private static final String GUAVA = "guava";
 
-  static final ImmutableList<File> CLASS_PATH_WITHOUT_GUAVA_OPTION =
-      Splitter.on(PATH_SEPARATOR.value()).splitToList(JAVA_CLASS_PATH.value()).stream()
+  static final List<File> CLASS_PATH_WITHOUT_GUAVA_OPTION =
+      Arrays.stream(System.getProperty("java.class.path").split("[" + System.getProperty("path.separator") + "]", -1))
           .filter(jar -> !jar.contains(GUAVA))
           // Remove Bazel's runner deploy jar which leaks Guava classes into the classpath and
           // the compile testing tests.
           .filter(jar -> !jar.contains("Runner_deploy.jar"))
           .map(File::new)
-          .collect(collectingAndThen(toList(), ImmutableList::copyOf));
+          .collect(toList());
 
-  static final ImmutableList<String> DEFAULT_JAVACOPTS =
-      ImmutableList.of(
+  static final List<String> DEFAULT_JAVACOPTS =
+      List.of(
           "-Adagger.experimentalDaggerErrorMessages=enabled");
 
   /**
@@ -52,18 +50,18 @@ public final class Compilers {
    * extras.
    */
   public static Compiler daggerCompiler(Processor... extraProcessors) {
-    ImmutableList.Builder<Processor> processors = ImmutableList.builder();
+    List<Processor> processors = new ArrayList<>();
     processors.add(new ComponentProcessor());
-    processors.add(extraProcessors);
-    return javac().withProcessors(processors.build()).withOptions(DEFAULT_JAVACOPTS);
+    Collections.addAll(processors, extraProcessors);
+    return javac().withProcessors(processors).withOptions(DEFAULT_JAVACOPTS);
   }
 
   public static Compiler compilerWithOptions(CompilerMode... compilerModes) {
-    ImmutableList.Builder<String> options = ImmutableList.builder();
+    List<String> options = new ArrayList<>();
     for (CompilerMode compilerMode : compilerModes) {
-      options = options.addAll(compilerMode.javacopts());
+      options.addAll(compilerMode.javacopts());
     }
-    return compilerWithOptions(options.build());
+    return compilerWithOptions(options);
   }
 
   public static Compiler compilerWithOptions(String... options) {
@@ -72,8 +70,9 @@ public final class Compilers {
 
   public static Compiler compilerWithOptions(Iterable<String> options) {
     return daggerCompiler()
-        .withOptions(ImmutableList.builder().addAll(DEFAULT_JAVACOPTS).addAll(options).build());
+        .withOptions(Util.concat(DEFAULT_JAVACOPTS, Util.listOf(options)));
   }
 
-  private Compilers() {}
+  private Compilers() {
+  }
 }
